Handle timeout resets in a 2-stage way

BUG: 270430