daemon/powerdevilcore.h
@@ -123,6 +123,7 @@ private:
     QHash< int, int > m_registeredIdleTimeouts;
     QHash< Action*, QList< int > > m_registeredActionTimeouts;
     QList< Action* > m_pendingResumeFromIdleActions;
+    bool m_pendingWakeupEvent;
 
 private Q_SLOTS:
     void onBackendReady();
